# fusilli

./: CMakeLists.txt  README.md
.github/workflows/: flake-test.yml
benchmarks/: CMakeLists.txt  driver.cpp  test_commands.txt
build_tools/cmake/: FusilliBuildUtils.cmake  FusilliTestUtils.cmake
build_tools/docker/: exec_docker_ci.sh
include/fusilli/backend/: backend.h
include/fusilli/graph/: graph.h
include/fusilli/support/: external_tools.h
plugins/hipdnn-plugin/: CMakeLists.txt
plugins/hipdnn-plugin/build_tools/: thepebble_config.toml
plugins/hipdnn-plugin/include/: graph_import.h
plugins/hipdnn-plugin/src/: fusilli_plugin.cpp
plugins/hipdnn-plugin/test/: CMakeLists.txt  test_fusilli_plugin_api.cpp  test_graph_import.cpp
plugins/hipdnn-plugin/test/integration/: CMakeLists.txt  test_basic.cpp  test_convfprop.cpp  test_convfprop_fused.cpp
tests/: CMakeLists.txt
tests/lit/: test_matmul_asm_emitter_broadcast_3D.cpp  test_matmul_asm_emitter_broadcast_4D.cpp
